Добавлена перезагрузка данных о игроках при /timereward reload